performance analysis development

--- a/notebooks/ensemble_dev.ipynb
+++ b/notebooks/ensemble_dev.ipynb
@@ -3,12 +3,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "broken-relation",
+   "id": "collective-infrastructure",
    "metadata": {},
    "outputs": [],
    "source": [
     "import os, sys\n",
-    "import argparse\n",
     "import pickle\n",
     "from collections import defaultdict\n",
     "\n",
@@ -26,7 +25,27 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sunset-element",
+   "id": "injured-buddy",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir('..')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "polished-interview",
+   "metadata": {},
+   "source": [
+    "## Development of ensemble.py\n",
+    "\n",
+    "Skip down for next phase"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "acceptable-supervisor",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,18 +63,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "regular-rhythm",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "os.chdir('..')"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
-   "id": "optimum-atmosphere",
+   "id": "likely-armenia",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1121,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "informational-jumping",
+   "id": "eight-engineering",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1127,7 +1136,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "seasonal-spanish",
+   "id": "liberal-omega",
    "metadata": {},
    "outputs": [
     {
@@ -1250,9 +1259,531 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "dynamic-typing",
+   "metadata": {},
+   "source": [
+    "## Ensembling predictions over each study"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "mathematical-faculty",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>any</th>\n",
+       "      <th>epidural</th>\n",
+       "      <th>subdural</th>\n",
+       "      <th>subarachnoid</th>\n",
+       "      <th>intraventricular</th>\n",
+       "      <th>intraparenchymal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CQ500-CT-0_CT000000</td>\n",
+       "      <td>0.220050</td>\n",
+       "      <td>7.128165e-04</td>\n",
+       "      <td>0.027638</td>\n",
+       "      <td>4.513056e-02</td>\n",
+       "      <td>9.324121e-02</td>\n",
+       "      <td>0.004593</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CQ500-CT-0_CT000001</td>\n",
+       "      <td>0.052812</td>\n",
+       "      <td>1.171713e-03</td>\n",
+       "      <td>0.037920</td>\n",
+       "      <td>1.186657e-02</td>\n",
+       "      <td>2.939196e-03</td>\n",
+       "      <td>0.002905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CQ500-CT-0_CT000002</td>\n",
+       "      <td>0.000414</td>\n",
+       "      <td>5.517809e-06</td>\n",
+       "      <td>0.000355</td>\n",
+       "      <td>4.857891e-05</td>\n",
+       "      <td>1.740619e-06</td>\n",
+       "      <td>0.000024</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CQ500-CT-0_CT000003</td>\n",
+       "      <td>0.000101</td>\n",
+       "      <td>1.478510e-06</td>\n",
+       "      <td>0.000066</td>\n",
+       "      <td>1.765660e-05</td>\n",
+       "      <td>3.353649e-07</td>\n",
+       "      <td>0.000009</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CQ500-CT-0_CT000004</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>1.296723e-08</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>7.904839e-07</td>\n",
+       "      <td>2.282328e-08</td>\n",
+       "      <td>0.000003</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    ID       any      epidural  subdural  subarachnoid  \\\n",
+       "0  CQ500-CT-0_CT000000  0.220050  7.128165e-04  0.027638  4.513056e-02   \n",
+       "1  CQ500-CT-0_CT000001  0.052812  1.171713e-03  0.037920  1.186657e-02   \n",
+       "2  CQ500-CT-0_CT000002  0.000414  5.517809e-06  0.000355  4.857891e-05   \n",
+       "3  CQ500-CT-0_CT000003  0.000101  1.478510e-06  0.000066  1.765660e-05   \n",
+       "4  CQ500-CT-0_CT000004  0.000007  1.296723e-08  0.000002  7.904839e-07   \n",
+       "\n",
+       "   intraventricular  intraparenchymal  \n",
+       "0      9.324121e-02          0.004593  \n",
+       "1      2.939196e-03          0.002905  \n",
+       "2      1.740619e-06          0.000024  \n",
+       "3      3.353649e-07          0.000009  \n",
+       "4      2.282328e-08          0.000003  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_df = pd.read_csv(\"input/test_predictions.csv\")\n",
+    "preds_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "biological-channel",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>any</th>\n",
+       "      <th>epidural</th>\n",
+       "      <th>subdural</th>\n",
+       "      <th>subarachnoid</th>\n",
+       "      <th>intraventricular</th>\n",
+       "      <th>intraparenchymal</th>\n",
+       "      <th>PatientID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CQ500-CT-0_CT000000</td>\n",
+       "      <td>0.220050</td>\n",
+       "      <td>7.128165e-04</td>\n",
+       "      <td>0.027638</td>\n",
+       "      <td>4.513056e-02</td>\n",
+       "      <td>9.324121e-02</td>\n",
+       "      <td>0.004593</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CQ500-CT-0_CT000001</td>\n",
+       "      <td>0.052812</td>\n",
+       "      <td>1.171713e-03</td>\n",
+       "      <td>0.037920</td>\n",
+       "      <td>1.186657e-02</td>\n",
+       "      <td>2.939196e-03</td>\n",
+       "      <td>0.002905</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CQ500-CT-0_CT000002</td>\n",
+       "      <td>0.000414</td>\n",
+       "      <td>5.517809e-06</td>\n",
+       "      <td>0.000355</td>\n",
+       "      <td>4.857891e-05</td>\n",
+       "      <td>1.740619e-06</td>\n",
+       "      <td>0.000024</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CQ500-CT-0_CT000003</td>\n",
+       "      <td>0.000101</td>\n",
+       "      <td>1.478510e-06</td>\n",
+       "      <td>0.000066</td>\n",
+       "      <td>1.765660e-05</td>\n",
+       "      <td>3.353649e-07</td>\n",
+       "      <td>0.000009</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CQ500-CT-0_CT000004</td>\n",
+       "      <td>0.000007</td>\n",
+       "      <td>1.296723e-08</td>\n",
+       "      <td>0.000002</td>\n",
+       "      <td>7.904839e-07</td>\n",
+       "      <td>2.282328e-08</td>\n",
+       "      <td>0.000003</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    ID       any      epidural  subdural  subarachnoid  \\\n",
+       "0  CQ500-CT-0_CT000000  0.220050  7.128165e-04  0.027638  4.513056e-02   \n",
+       "1  CQ500-CT-0_CT000001  0.052812  1.171713e-03  0.037920  1.186657e-02   \n",
+       "2  CQ500-CT-0_CT000002  0.000414  5.517809e-06  0.000355  4.857891e-05   \n",
+       "3  CQ500-CT-0_CT000003  0.000101  1.478510e-06  0.000066  1.765660e-05   \n",
+       "4  CQ500-CT-0_CT000004  0.000007  1.296723e-08  0.000002  7.904839e-07   \n",
+       "\n",
+       "   intraventricular  intraparenchymal   PatientID  \n",
+       "0      9.324121e-02          0.004593  CQ500-CT-0  \n",
+       "1      2.939196e-03          0.002905  CQ500-CT-0  \n",
+       "2      1.740619e-06          0.000024  CQ500-CT-0  \n",
+       "3      3.353649e-07          0.000009  CQ500-CT-0  \n",
+       "4      2.282328e-08          0.000003  CQ500-CT-0  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_df[\"PatientID\"] = preds_df[\"ID\"].str.split('_', expand=True).iloc[:, 0]\n",
+    "preds_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "retired-workshop",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold_dict = {\n",
+    "    \"any\": 0.5,\n",
+    "    \"epidural\": 0.5,\n",
+    "    \"subdural\": 0.5,\n",
+    "    \"subarachnoid\": 0.5,\n",
+    "    \"intraventricular\": 0.5,\n",
+    "    \"intraparenchymal\": 0.5\n",
+    "}\n",
+    "\n",
+    "def threshold_preds(df):\n",
+    "    df_new = df.copy()\n",
+    "    col_names = [\"any\", \"epidural\", \"subdural\", \"subarachnoid\", \"intraventricular\", \"intraparenchymal\"]\n",
+    "    for name in col_names:\n",
+    "        df_new[name] = df_new[name].apply(lambda x: 1 if x >= threshold_dict[name] else 0)\n",
+    "    return df_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "bulgarian-plymouth",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>any</th>\n",
+       "      <th>epidural</th>\n",
+       "      <th>subdural</th>\n",
+       "      <th>subarachnoid</th>\n",
+       "      <th>intraventricular</th>\n",
+       "      <th>intraparenchymal</th>\n",
+       "      <th>PatientID</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CQ500-CT-0_CT000000</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CQ500-CT-0_CT000001</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CQ500-CT-0_CT000002</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CQ500-CT-0_CT000003</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CQ500-CT-0_CT000004</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                    ID  any  epidural  subdural  subarachnoid  \\\n",
+       "0  CQ500-CT-0_CT000000    0         0         0             0   \n",
+       "1  CQ500-CT-0_CT000001    0         0         0             0   \n",
+       "2  CQ500-CT-0_CT000002    0         0         0             0   \n",
+       "3  CQ500-CT-0_CT000003    0         0         0             0   \n",
+       "4  CQ500-CT-0_CT000004    0         0         0             0   \n",
+       "\n",
+       "   intraventricular  intraparenchymal   PatientID  \n",
+       "0                 0                 0  CQ500-CT-0  \n",
+       "1                 0                 0  CQ500-CT-0  \n",
+       "2                 0                 0  CQ500-CT-0  \n",
+       "3                 0                 0  CQ500-CT-0  \n",
+       "4                 0                 0  CQ500-CT-0  "
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_df = threshold_preds(preds_df)\n",
+    "preds_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "fifth-waters",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PatientID</th>\n",
+       "      <th>any</th>\n",
+       "      <th>epidural</th>\n",
+       "      <th>subdural</th>\n",
+       "      <th>subarachnoid</th>\n",
+       "      <th>intraventricular</th>\n",
+       "      <th>intraparenchymal</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CQ500-CT-0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CQ500-CT-1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>CQ500-CT-10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>CQ500-CT-100</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CQ500-CT-101</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      PatientID  any  epidural  subdural  subarachnoid  intraventricular  \\\n",
+       "0    CQ500-CT-0    0         0         0             0                 0   \n",
+       "1    CQ500-CT-1    1         0         0             1                 1   \n",
+       "2   CQ500-CT-10    1         0         0             0                 0   \n",
+       "3  CQ500-CT-100    0         0         0             0                 0   \n",
+       "4  CQ500-CT-101    0         0         0             0                 0   \n",
+       "\n",
+       "   intraparenchymal  \n",
+       "0                 0  \n",
+       "1                 1  \n",
+       "2                 1  \n",
+       "3                 0  \n",
+       "4                 0  "
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "preds_df = preds_df.groupby(\"PatientID\").any().drop(columns=[\"ID\"]).astype(int).reset_index()\n",
+    "preds_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "clean-calibration",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds_df.to_csv(\"input/preds_by_case.csv\", index=False)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "humanitarian-australia",
+   "id": "logical-spain",
    "metadata": {},
    "outputs": [],
    "source": []
